Fix alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,6 @@
 
 @media (min-width: 768px) {
   .main {
-    margin-top: 3.6rem; /* apply starting at md */
+    margin-top: 3.8rem; /* apply starting at md */
   }
 }
